--- a/scroll/src/App.css
+++ b/scroll/src/App.css
@@ -1,5 +1,3 @@
-
-
 .backdrop-blur-md {
   backdrop-filter: blur(10px);
 }
@@ -9,4 +7,8 @@
   bottom: 0;
   width: 100%;
   z-index: 10;
+}
+
+.bg-gradient-to-r {
+  background: linear-gradient(90deg, rgba(29,78,216,1) 0%, rgba(139,92,246,1) 50%, rgba(236,72,153,1) 100%);
 }
